nginx-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  namespace: bsa-pro
spec:
  containers:
    - name: nginx
      image: nginx:1.17.0-alpine
      ports:
        - containerPort: 8081
