service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: bsa-app
spec:
  type: NodePort
  selector:
    app: test
  ports:
    - port: 9876
      protocol: TCP
      targetPort: 8080
